<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/guitarmastil">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducir1"
        android:maxLines="1"
        android:nextFocusDown="@id/respuesta1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textColor="@android:color/white"
        android:textColorHint="#666666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/correcta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="#666666"
            android:nextFocusDown="@id/respuesta2"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/introducir2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/correcta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="#666666"
            android:nextFocusDown="@id/respuesta3"
            android:maxLines="1"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/introducir3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/correcta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="#666666"
            android:nextFocusDown="@id/respuesta4"
            android:maxLines="1"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/introducir4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/correcta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="#666666"
            android:maxLines="1"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/introducir5" />

    </LinearLayout>

    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/introducir6"/>

</LinearLayout>